@@ -1,5 +1,5 @@
 m4_define([SUBUNIT_MAJOR_VERSION], [1])
-m4_define([SUBUNIT_MINOR_VERSION], [0])
+m4_define([SUBUNIT_MINOR_VERSION], [1])
 m4_define([SUBUNIT_MICRO_VERSION], [0])
 m4_define([SUBUNIT_VERSION],
 m4_defn([SUBUNIT_MAJOR_VERSION]).m4_defn([SUBUNIT_MINOR_VERSION]).m4_defn([SUBUNIT_MICRO_VERSION]))
